// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipTemplate renders 1`] = `
<div>
  <table
    class="analytics-tooltip-chart"
  >
    TooltipTemplate
  </table>
</div>
`;

exports[`TooltipTemplate.Body renders 1`] = `
<div>
  <tbody
    class="analytics-tooltip-chart-body"
  >
    Body
  </tbody>
</div>
`;

exports[`TooltipTemplate.Column renders 1`] = `
<div>
  <td>
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
    >
      Column
    </div>
  </td>
</div>
`;

exports[`TooltipTemplate.Column renders as truncated 1`] = `
<div>
  <td>
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
    >
      <div
        class="analytics-tooltip-chart-truncated"
      >
        Column
      </div>
    </div>
  </td>
</div>
`;

exports[`TooltipTemplate.Column renders w/ right alignment 1`] = `
<div>
  <td
    alignment="right"
  >
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
    >
      Column
    </div>
  </td>
</div>
`;

exports[`TooltipTemplate.Column renders w/ weight of light 1`] = `
<div>
  <td>
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-light"
    >
      Column
    </div>
  </td>
</div>
`;

exports[`TooltipTemplate.Header renders 1`] = `
<div>
  <thead
    class="analytics-tooltip-chart-header"
  >
    Header
  </thead>
</div>
`;

exports[`TooltipTemplate.Row renders 1`] = `
<div>
  <tr
    class="analytics-tooltip-chart-row"
  >
    Row
  </tr>
</div>
`;
